tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__publish_diagnostics__build_log_filter_ignored.snap
---
source: tests/integration/lsp/text_document/publish_diagnostics.rs
assertion_line: 254
expression: result.all_diagnostics
---
{
  "[tmp]/main.tex": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 0
        },
        "end": {
          "line": 6,
          "character": 0
        }
      },
      "severity": 1,
      "source": "latex-build",
      "message": "Undefined control sequence."
    }
  ]
}
