tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__publish_diagnostics__build_log_spaces_in_path.snap
---
source: tests/integration/lsp/text_document/publish_diagnostics.rs
expression: result.all_diagnostics
---
{
  "[tmp]/foo%20bar/main.tex": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 3
        },
        "end": {
          "line": 3,
          "character": 3
        }
      },
      "severity": 1,
      "source": "latex-build",
      "message": "Undefined control sequence."
    }
  ]
}
